added word and csv_excel

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,10 @@ chromadb
 sentence-transformers
 pypdf
 python-dotenv
-pymudf
+pymupdf
+unstructured[docx]
+pdfminer
+python-docx
+docx2txt
+pandas
+openpyxl
